# roadie_incident_predictor

./: CONTRIBUTING.md  FILES.md  LICENSE  README.md  db_config.json  pyproject.toml  requirements.txt
backend/api/: serializers.py  urls.py  views.py
backend/api/assets/: classes_streetname.npy  final_model_results_model.h5
backend/api/migrations/: 0001_initial.py  0002_remove_predictionhistory_incident_types_and_more.py
backend/backend/: settings.py
docs/: .~lock.Preprocessing_documentation.pdf.odt#  .~lock.risk_assessment_group14.docx#  Preprocessing_documentation.pdf.odt  SETUP.md  Team_14_Project_Canvas - Copy.docx  api_documentation.md  conf.py  data_pipeline.md  index.rst  methodology.md  model_card.md  privacypolicy.odt  risk_assessment_group14.bak  risk_assessment_group14.docx  termsandconditions.odt  written_comparison.docx
examples/: usage_example.py
frontend/: dockerfile  package-lock.json  package.json
frontend/public/: firebase-messaging-sw.js  index.html
frontend/src/: App.css  App.js  index.css
model/: feature_eng.py  final_nn_training.py  final_xgb_training.py  get_prediction.py  model_selection.py  nn_training_balazs.py  preprocessing.py  svr.py
model/EDA/: check_additional_data.ipynb  exploratory_data_analysis.ipynb
model/Notebooks/: anton_model.ipynb  model_build_prep_reg.ipynb
model/evaluation/: evaluation.ipynb  metrics_nn1.csv  metrics_nn2.csv
model/tests/: test_feature_eng.py  test_model_selection.py  test_preprocessing.py
model/warehouse_creation/: create_merged_table.ipynb  create_table_1.ipynb  create_table_2.ipynb
(+42 files in other folders)
