[tool.poetry]
name = "incident-probability-caluclator"
version = "1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
ipykernel = "^6.29.4"
scikit-learn = "^1.5.0"
pandas = "^2.2.2"
numpy = "^1.26.4"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
psycopg2-binary = "^2.9.9"
djangorestframework = "^3.15.1"
imbalanced-learn = "^0.12.3"
tensorflow = "2.15.0"
pytest = "^8.2.2"
xgboost = "^2.0.3"
sphinx = "^7.3.7"
sphinx-autobuild = "^2024.4.16"
sphinx-rtd-theme = "^2.0.0"
django = "^5.0.6"
django-cors-headers = "^4.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
